[project]
name = "blessing-point"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Romain Girard", email = "romain.girard@spinergie.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "ruff>=0.12.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "torchvision>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
include = ["*.py", "*.ipynb"]
exclude = ["*.pyi", "*/snapshots/snap_*"]
line-length = 120
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S106"  # Hardcoded password
]
"*.ipynb" = [
    "B018"  # Useless expression
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "NPY",  # numpy
]
ignore = [
    "E203", "E402", "E266", "E303", "E701",
    "S101",  # Usage of assert
    "S113",  # Requests without timeout
    "S301",  # Pickle usage
    "S311",  # Pseudo-random generators
    "S602", "S603", "S605", "S607",  # Subprocess related
    "S608",  # Possible SQL injection,
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "pandas.Timestamp",
    "pandas.Timestamp.now",
    "pandas.Timedelta"
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]